Added SMTP Configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,21 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-QS8H0A8\\SQLEXPRESS;Database=WolmartDB;Trusted_Connection=True;"
+  },
+  "Application": {
+    "LoginPath": "/login",
+    "AppDomain": "http://localhost:52606/",
+    "EmailConfirmation": "confirm-email?uid={0}&token={1}"
+  },
+  "SMTPConfig": {
+    "SenderAddress": "no-reply@bookstoreapp.com",
+    "SenderDisplayName": "Book store team",
+    "UserName": "0704ea2a3d3699",
+    "Password": "ceba43d423f90a",
+    "Host": "smtp.mailtrap.io",
+    "Port": 587,
+    "EnableSSL": true,
+    "UseDefaultCredentials": true,
+    "IsBodyHTML": true
   }
 }
