Created account repository

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,12 +18,12 @@
   "SMTPConfig": {
     "SenderAddress": "no-reply@bookstoreapp.com",
     "SenderDisplayName": "Book store team",
-    "UserName": "0704ea2a3d3699",
-    "Password": "ceba43d423f90a",
-    "Host": "smtp.mailtrap.io",
+    "UserName": "748f7266e3c6cc",
+    "Password": "c26315a8e8c6eb",
+    "Host": "sandbox.smtp.mailtrap.io",
     "Port": 587,
     "EnableSSL": true,
-    "UseDefaultCredentials": true,
+    "UseDefaultCredentials": false,
     "IsBodyHTML": true
   }
 }
