--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,4 @@
-{
+ {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -13,7 +13,8 @@
   "Application": {
     "LoginPath": "/login",
     "AppDomain": "http://localhost:52606/",
-    "EmailConfirmation": "confirm-email?uid={0}&token={1}"
+    "EmailConfirmation": "confirm-email?uid={0}&token={1}",
+    "ForgotPassword": "reset-password?uid={0}&token={1}"
   },
   "SMTPConfig": {
     "SenderAddress": "no-reply@bookstoreapp.com",
