Updated account controller & repository

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,14 +14,14 @@
     "LoginPath": "/login",
     "AppDomain": "http://localhost:52606/",
     "EmailConfirmation": "confirm-email?uid={0}&token={1}",
-    "ForgotPassword": "reset-password?uid={0}&token={1}"
+    "ForgotPassword": "reset-password?uid={0}&token={1}&email={2}"
   },
   "SMTPConfig": {
-    "SenderAddress": "no-reply@bookstoreapp.com",
-    "SenderDisplayName": "Book store team",
-    "UserName": "748f7266e3c6cc",
-    "Password": "c26315a8e8c6eb",
-    "Host": "sandbox.smtp.mailtrap.io",
+    "SenderAddress": "no-reply@wolmart.com",
+    "SenderDisplayName": "Wolmart team",
+    "UserName": "techzip13@gmail.com",
+    "Password": "cjuhjnjgpujdomli",
+    "Host": "smtp.gmail.com",
     "Port": 587,
     "EnableSSL": true,
     "UseDefaultCredentials": false,
