--- a/Wolmart.Ecommerce.csproj
+++ b/Wolmart.Ecommerce.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\Components\Account\" />
+  </ItemGroup>
+
 </Project>
